# pde_slam

./: .gitignore  PDE_SLAM_OnePager.md  README.md  pinn_map.py  pyproject.toml  rbpf_slam.py  run_experiment.py
conf/: config.yaml
conf/filter/: default.yaml
conf/map/: quadtree.yaml
conf/method/: all.yaml  slam_only.yaml  slam_vs_oracle.yaml
conf/sim/: default.yaml
conf/viz/: default.yaml
data/: AdvDiffDataLoader.py  DataLoader.py  __init__.py
data/bbc_pier/: data.csv
data/bbc_pier_simulation/: data.csv
data/swe/: X_coords.npy  Y_coords.npy  bathymetry_values.npy  estimated_trajectory.csv  true_trajectory.csv
results/: log.npz  metrics.json
trajectory/: SimMotion.py  SimTrajectory.py
