[project]
name = "pde-slam"
version = "0.1.0"
description = "PDE SLAM with adaptive quadtree PINN map (Method 2) - extension of the IROS 2026 PDE localization paper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "matplotlib>=3.9",
    "hydra-core>=1.3",
    # GPU by default on Linux with an NVIDIA GPU (CUDA 12 driver): the
    # cuda12 plugin ships the CUDA libraries and JAX picks the GPU
    # automatically - no code changes needed. Non-Linux (e.g. native
    # Windows) falls back to the CPU-only wheel; use WSL2 for GPU there.
    "jax[cuda12]>=0.6; sys_platform == 'linux'",
    "jax>=0.6; sys_platform != 'linux'",
]

[tool.uv]
# dependency-only project (flat scripts, not an importable package)
package = false
